log
Fri, Mar 28, 2025 11:34:24 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025 11:45:19 AM: 
 list.c | 33 ++++++++++++++++++++++++++++-----
 1 file changed, 28 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'lastList':
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9bda7e0
Fri, Mar 28, 2025 11:47:48 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
5cc08b8
Fri, Mar 28, 2025 11:51:06 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
976ffef
Fri, Mar 28, 2025 11:55:34 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
2f81bd5
Fri, Mar 28, 2025 11:56:27 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c609ce4
Fri, Mar 28, 2025 11:57:08 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c4a9410
Fri, Mar 28, 2025 11:57:52 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
418cb6c
Fri, Mar 28, 2025 12:02:59 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
a592ad5
Fri, Mar 28, 2025 12:03:18 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9ea212a
Fri, Mar 28, 2025 12:10:37 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
cdfa98a
Fri, Mar 28, 2025 12:11:40 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
79304f4
Fri, Mar 28, 2025 12:12:22 PM: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d02f03f
Fri, Mar 28, 2025  7:43:58 PM: 
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1531943
Fri, Mar 28, 2025  7:51:19 PM: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:103:9: error: 'return' with no value, in function returning non-void [-Werror]
         return;
         ^~~~~~
list.c:101:7: note: declared here
 void* popCurrent(List* list) {
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d780042
